src/test/ui/consts/miri_unleashed/feature-gate-unleash_the_miri_inside_of_you.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/feature-gate-unleash_the_miri_inside_of_you.rs:11:20
   |
LL |     const F: u32 = (U::X, 42).1;
   |                    ^^^^^^^^^^ constants cannot evaluate destructors

error: `std::vec::Vec::<T>::new` is not yet stable as a const fn
  --> $DIR/feature-gate-unleash_the_miri_inside_of_you.rs:18:25
   |
LL |     const X: Vec<u32> = Vec::new();
   |                         ^^^^^^^^^^
   |
   = help: add `#![feature(const_vec_new)]` to the crate attributes to enable

error: aborting due to 2 previous errors

